--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 streamlit = "^1.40.2"
 seaborn = "^0.13.2"
 matplotlib = "^3.9.3"
+joblib = "^1.4.2"
+scikit-learn = "^1.5.2"
 
 
 [build-system]
